# Project1

./: Bot.py  Dockerfile  LICENSE  README.md  base_agent.py  connectFour_frontend.ipynb  connect_four_agent_testing.ipynb  game.py  play_human.py  pygame_frontend_experimentation.ipynb  requirements.txt  setup.cfg  setup.py  tdagent.py  train_sb_agent.py
connect_four/backend/: base_agent.py  game.py  play_human.py  tdagent.py  train_sb_agent.py
connect_four/pygame_frontend/: frontend.py
notebooks/: connect_four_agent_testing.ipynb  pygame_frontend_experimentation.ipynb
