[metadata]
name = orchestration
description = orchestrator for midman distance summon prediction sagemaker ml pipeline, to be runned as k8s job
version = 0.0.1

[options]
packages =
    orchestration        

install_requires =
    psycopg2-binary>=2.8
    python-dotenv>=0.17
    sagemaker>=2.58
    setuptools>=52.0.0
    boto3>=1.18
    psutil>=5.8
    click>=8.0
    confuse>=1.6

python_requires = >=3.9
zip_safe = no

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-tabs
    isort
    mypy

[options.package_data]
orchestration = py.typed

